2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/test.c: do not print times if -t is not passed

	* test/driver.c: removed use of GList from the driver to avoid skews due
	to performance differences between GLib and EGLib
	
2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/test.c: Perform iterations at the test level, only output one
	report for all iterations of tests in a group to produce more usable
	output; add timing for the tests and group; added get_timestamp for
	easy code timing

	* test/test.h: Removed run_test as it should only be called from 
	run_group, added get_timestamp

	* test/Makefile.am: Added -DDRIVER_NAME 

	* test/test-both: simple script to run both drivers with the same options

	* test/driver.c: Iterations are now run at the test level, show a global
	status (OK/FAIL) indicator

	* test/README: Updated

	* configure.ac: Renamed from configure.in as configure.in naming 
	convention is deprecated in favor of configure.ac

	* autogen.sh: s/configure.in/configure.ac/

2006-08-19  Miguel de Icaza  <miguel@novell.com>

	* Makefile.am: Removed MAINTAINERCLEANFILES that was too
	aggresive, it failed make distcheck and the resulting tarball was
	not buildable.

	* src/glib.h: remove the various GPOINTER_TO_*, G*_TO_POINTER,
	GSIZE_FORMAT macros, and move them into src/eglib-config.h

	Moved also gssize and gsize to be arch specific.   This should fix
	the 32/64 problems that Jon Chambers reported. 

	* configure.in: test for pointer size, define the various values
	depending on 32 vs 32/64 worlds, might need further porting in the
	future. 

	Change package name to eglib

	* test/slist.c, test/list.c, test/hashtable.c: Update tests to use
	FAILURE macro.

	* test/string-util.c: fix leak for valgrind tests.

	* test/tests.h: New size test, for testing datatypes.

	* test/sizes.c: New tests.
	
2006-08-19  Aaron Bockover  <abockover@novell.com>

	* test/README: Added quick guide on adding new tests/groups to the 